--- a/src/scss/_partials/custom.scss
+++ b/src/scss/_partials/custom.scss
@@ -102,110 +102,31 @@
   }
 }
 
-.btn-adn {
-  @include btn-social(#d87a68);
-}
+.btn-adn           { @include btn-social(#d87a68); }
+.btn-bitbucket     { @include btn-social(#205081); }
+.btn-dropbox       { @include btn-social(#1087dd); }
+.btn-facebook      { @include btn-social(#3b5998); }
+.btn-flickr        { @include btn-social(#ff0084); }
+.btn-foursquare    { @include btn-social(#f94877); }
+.btn-github        { @include btn-social(#444444); }
+.btn-google        { @include btn-social(#dd4b39); }
+.btn-instagram     { @include btn-social(#3f729b); }
+.btn-linkedin      { @include btn-social(#007bb6); }
+.btn-microsoft     { @include btn-social(#2672ec); }
+.btn-odnoklassniki { @include btn-social(#f4731c); }
+.btn-openid        { @include btn-social(#f7931e); }
+.btn-pinterest     { @include btn-social(#cb2027); }
+.btn-reddit        { @include btn-social(#eff7ff); }
+.btn-soundcloud    { @include btn-social(#ff5500); }
+.btn-tumblr        { @include btn-social(#2c4762); }
+.btn-vimeo         { @include btn-social(#1ab7ea); }
+.btn-vk            { @include btn-social(#587ea3); }
+.btn-yahoo         { @include btn-social(#720e9e); }
+.btn-stripe        { @include btn-social(#1275FF); }
+.btn-untappd       { @include btn-social(#ffc000); }
+.btn-gitlab        { @include btn-social(#de7e00); }
 
-.btn-bitbucket {
-  @include btn-social(#205081);
-}
-
-.btn-dropbox {
-  @include btn-social(#1087dd);
-}
-
-.btn-facebook {
-  @include btn-social(#3b5998);
-}
-
-.btn-flickr {
-  @include btn-social(#ff0084);
-}
-
-.btn-foursquare {
-  @include btn-social(#f94877);
-}
-
-.btn-github {
-  @include btn-social(#444444);
-}
-
-.btn-google {
-  @include btn-social(#dd4b39);
-}
-
-.btn-instagram {
-  @include btn-social(#3f729b);
-}
-
-.btn-linkedin {
-  @include btn-social(#007bb6);
-}
-
-.btn-microsoft {
-  @include btn-social(#2672ec);
-}
-
-.btn-odnoklassniki {
-  @include btn-social(#f4731c);
-}
-
-.btn-openid {
-  @include btn-social(#f7931e);
-}
-
-.btn-pinterest {
-  @include btn-social(#cb2027);
-}
-
-.btn-reddit {
-  @include btn-social(#eff7ff);
-}
-
-.btn-soundcloud {
-  @include btn-social(#ff5500);
-}
-
-.btn-tumblr {
-  @include btn-social(#2c4762);
-}
-
-.btn-twitter {
-  @include btn-social(#1DA1F2, #fff);
-}
-
-.btn-vimeo {
-  @include btn-social(#1ab7ea);
-}
-
-.btn-vk {
-  @include btn-social(#587ea3);
-}
-
-.btn-yahoo {
-  @include btn-social(#720e9e);
-}
-
-.btn-stripe {
-  @include btn-social(#1275FF);
-}
-
-.btn-amazon {
-  @include btn-social(#FF9900, #232F3E);
-}
-
-.btn-patreon {
-  @include btn-social(#F96854, #052D49);
-}
-
-.btn-untappd {
-  @include btn-social(#ffc000);
-}
-
-.btn-gitlab {
-  @include btn-social(#de7e00);
-}
-
-.btn-whatsapp {
-  @include btn-social(#25D366, #fff);
-}
+.btn-whatsapp      { @include btn-social(#25D366, #fff); }
+.btn-twitter       { @include btn-social(#1DA1F2, #fff); }
+.btn-amazon        { @include btn-social(#FF9900, #232F3E); }
+.btn-patreon       { @include btn-social(#F96854, #052D49); }
