--- a/src/scss/_partials/custom.scss
+++ b/src/scss/_partials/custom.scss
@@ -102,31 +102,31 @@
   }
 }
 
-.btn-adn           { @include btn-social(#d87a68); }
-.btn-bitbucket     { @include btn-social(#205081); }
-.btn-dropbox       { @include btn-social(#1087dd); }
-.btn-facebook      { @include btn-social(#3b5998); }
-.btn-flickr        { @include btn-social(#ff0084); }
-.btn-foursquare    { @include btn-social(#f94877); }
-.btn-github        { @include btn-social(#444444); }
-.btn-google        { @include btn-social(#dd4b39); }
-.btn-instagram     { @include btn-social(#3f729b); }
-.btn-linkedin      { @include btn-social(#007bb6); }
-.btn-microsoft     { @include btn-social(#2672ec); }
-.btn-odnoklassniki { @include btn-social(#f4731c); }
-.btn-openid        { @include btn-social(#f7931e); }
-.btn-pinterest     { @include btn-social(#cb2027); }
-.btn-reddit        { @include btn-social(#eff7ff); }
-.btn-soundcloud    { @include btn-social(#ff5500); }
-.btn-tumblr        { @include btn-social(#2c4762); }
-.btn-vimeo         { @include btn-social(#1ab7ea); }
-.btn-vk            { @include btn-social(#587ea3); }
-.btn-yahoo         { @include btn-social(#720e9e); }
-.btn-stripe        { @include btn-social(#1275FF); }
-.btn-untappd       { @include btn-social(#ffc000); }
-.btn-gitlab        { @include btn-social(#de7e00); }
+.btn-adn           { @include btn-social($color-adn); }
+.btn-bitbucket     { @include btn-social($color-bitbucket); }
+.btn-dropbox       { @include btn-social($color-dropbox); }
+.btn-facebook      { @include btn-social($color-facebook); }
+.btn-flickr        { @include btn-social($color-flickr); }
+.btn-foursquare    { @include btn-social($color-foursquare); }
+.btn-github        { @include btn-social($color-github); }
+.btn-google        { @include btn-social($color-google); }
+.btn-instagram     { @include btn-social($color-instagram); }
+.btn-linkedin      { @include btn-social($color-linkedin); }
+.btn-microsoft     { @include btn-social($color-microsoft); }
+.btn-odnoklassniki { @include btn-social($color-odnoklassniki); }
+.btn-openid        { @include btn-social($color-openid); }
+.btn-pinterest     { @include btn-social($color-pinterest); }
+.btn-reddit        { @include btn-social($color-reddit); }
+.btn-soundcloud    { @include btn-social($color-soundcloud); }
+.btn-tumblr        { @include btn-social($color-tumblr); }
+.btn-vimeo         { @include btn-social($color-vimeo); }
+.btn-vk            { @include btn-social($color-vk); }
+.btn-yahoo         { @include btn-social($color-yahoo); }
+.btn-stripe        { @include btn-social($color-stripe); }
+.btn-untappd       { @include btn-social($color-untappd); }
+.btn-gitlab        { @include btn-social($color-gitlab); }
 
-.btn-whatsapp      { @include btn-social(#25D366, #fff); }
-.btn-twitter       { @include btn-social(#1DA1F2, #fff); }
-.btn-amazon        { @include btn-social(#FF9900, #232F3E); }
-.btn-patreon       { @include btn-social(#F96854, #052D49); }
+.btn-whatsapp      { @include btn-social($color-whatsapp, $color-white); }
+.btn-twitter       { @include btn-social($color-twitter, $color-white); }
+.btn-amazon        { @include btn-social($color-amazon, $color-amazon-text); }
+.btn-patreon       { @include btn-social($color-patreon, $color-patreon-text); }
