--- a/src/scss/_partials/variables.scss
+++ b/src/scss/_partials/variables.scss
@@ -8,21 +8,57 @@
 ///
 
 // Bootstrap-social support for Bootstrap 4.x
-$btn-padding-y: 0.5rem;
-$btn-padding-y-lg: 0.75rem;
-$btn-padding-y-sm: 0.25rem;
+$btn-padding-y:    .5rem;
+$btn-padding-y-lg: .75rem;
+$btn-padding-y-sm: .25rem;
 
-$btn-line-height: 1.25;
+$btn-line-height:  1.25;
 
-$btn-padding-x: 1rem;
+$btn-padding-x:    1rem;
 $btn-padding-x-lg: 1.5rem;
-$btn-padding-x-sm: 0.5rem;
+$btn-padding-x-sm: .5rem;
 
-$padding-base-horizontal: $btn-padding-y;
+$padding-base-horizontal:  $btn-padding-y;
 $padding-large-horizontal: $btn-padding-y-lg;
 $padding-small-horizontal: $btn-padding-y-sm;
 
 $bs-height-base: floor($btn-line-height + $btn-padding-x * 2);
-$bs-height-lg: floor($btn-line-height + $btn-padding-x-lg * 2);
-$bs-height-sm: floor($btn-line-height + $btn-padding-x-sm * 2);
-$bs-height-xs: floor($btn-line-height + $btn-padding-x-sm * 2);
+$bs-height-lg:   floor($btn-line-height + $btn-padding-x-lg * 2);
+$bs-height-sm:   floor($btn-line-height + $btn-padding-x-sm * 2);
+$bs-height-xs:   floor($btn-line-height + $btn-padding-x-sm * 2);
+
+// Colors
+$color-white: #fff;
+$color-grey: #555;
+
+// Branding
+$color-adn: #d87a68;
+$color-bitbucket: #205081;
+$color-dropbox: #1087dd;
+$color-facebook: #3b5998;
+$color-flickr:  #ff0084;
+$color-foursquare: #f94877;
+$color-github: #444444;
+$color-google: #dd4b39;
+$color-instagram: #3f729b;
+$color-linkedin:      #007bb6;
+$color-microsoft: #2672ec;
+$color-odnoklassniki: #f4731c;
+$color-openid:        #f7931e;
+$color-pinterest: #cb2027;
+$color-reddit: #eff7ff;
+$color-soundcloud: #ff5500;
+$color-tumblr: #2c4762;
+$color-vimeo:  #1ab7ea;
+$color-vk: #587ea3;
+$color-yahoo: #720e9e;
+$color-stripe: #1275FF;
+$color-untappd: #ffc000;
+$color-gitlab: #de7e00;
+$color-whatsapp: #25d366;
+$color-twitter: #1DA1F2;
+$color-amazon: #FF9900;
+$color-amazon-text:  #232F3E;
+$color-patreon: #F96854;
+$color-patreon-text: #052D49;
+
