--- a/src/scss/_partials/variables.scss
+++ b/src/scss/_partials/variables.scss
@@ -29,36 +29,38 @@ $bs-height-xs:   floor($btn-line-height + $btn-padding-x-sm * 2);
 
 // Colors
 $color-white: #fff;
-$color-grey: #555;
+$color-white-social: #e8e8ee;
+$color-purple: #720e9e;
+$color-red: #dd4b39;
+$color-grey:  #555;
 
 // Branding
-$color-adn: #d87a68;
-$color-bitbucket: #205081;
-$color-dropbox: #1087dd;
-$color-facebook: #3b5998;
-$color-flickr:  #ff0084;
-$color-foursquare: #f94877;
-$color-github: #444444;
-$color-google: #dd4b39;
-$color-instagram: #3f729b;
+$color-adn:           #d87a68;
+$color-bitbucket:     #205081;
+$color-dropbox:       #1087dd;
+$color-facebook:      #3b5998;
+$color-flickr:        #ff0084;
+$color-foursquare:    #f94877;
+$color-github:        #444;
+$color-google:        #dd4b39;
+$color-instagram:     #3f729b;
 $color-linkedin:      #007bb6;
-$color-microsoft: #2672ec;
+$color-microsoft:     #2672ec;
 $color-odnoklassniki: #f4731c;
 $color-openid:        #f7931e;
-$color-pinterest: #cb2027;
-$color-reddit: #eff7ff;
-$color-soundcloud: #ff5500;
-$color-tumblr: #2c4762;
-$color-vimeo:  #1ab7ea;
-$color-vk: #587ea3;
-$color-yahoo: #720e9e;
-$color-stripe: #1275FF;
-$color-untappd: #ffc000;
-$color-gitlab: #de7e00;
-$color-whatsapp: #25d366;
-$color-twitter: #1DA1F2;
-$color-amazon: #FF9900;
-$color-amazon-text:  #232F3E;
-$color-patreon: #F96854;
-$color-patreon-text: #052D49;
-
+$color-pinterest:     #cb2027;
+$color-reddit:        #eff7ff;
+$color-soundcloud:    #f50;
+$color-tumblr:        #2c4762;
+$color-vimeo:         #1ab7ea;
+$color-vk:            #587ea3;
+$color-yahoo:         #720e9e;
+$color-stripe:        #1275ff;
+$color-untappd:       #ffc000;
+$color-gitlab:        #de7e00;
+$color-whatsapp:      #25d366;
+$color-twitter:       #1da1f2;
+$color-amazon:        #f90;
+$color-amazon-text:   #232f3e;
+$color-patreon:       #f96854;
+$color-patreon-text:  #052d49;
