--- a/src/scss/_partials/custom.scss
+++ b/src/scss/_partials/custom.scss
@@ -1,30 +1,30 @@
 .btn-social {
-  position: relative;
-  padding-left: $bs-height-base + $padding-base-horizontal;
-  text-align: left;
-  white-space: nowrap;
   overflow: hidden;
+  padding-left: $bs-height-base + $padding-base-horizontal;
+  position: relative;
+  text-align: left;
   text-overflow: ellipsis;
+  white-space: nowrap;
 
   > :first-child {
-    position: absolute;
-    left: 0;
-    top: 0;
+    border-right: 1px solid rgba(0, 0, 0, .2);
     bottom: 0;
-    width: $bs-height-base;
-    line-height: $bs-height-base + 2;
     font-size: 1.6em;
+    left: 0;
+    line-height: $bs-height-base + 2;
+    position: absolute;
     text-align: center;
-    border-right: 1px solid rgba(0, 0, 0, 0.2);
+    top: 0;
+    width: $bs-height-base;
   }
 
   &.btn-lg {
     padding-left: $bs-height-lg + $padding-large-horizontal;
 
     > :first-child {
+      font-size: 1.8em;
       line-height: $bs-height-lg;
       width: $bs-height-lg;
-      font-size: 1.8em;
     }
   }
 
@@ -32,9 +32,9 @@
     padding-left: $bs-height-sm + $padding-small-horizontal;
 
     > :first-child {
+      font-size: 1.4em;
       line-height: $bs-height-sm;
       width: $bs-height-sm;
-      font-size: 1.4em;
     }
   }
 
@@ -42,20 +42,21 @@
     padding-left: $bs-height-xs + $padding-small-horizontal;
 
     > :first-child {
+      font-size: 1.2em;
       line-height: $bs-height-xs;
       width: $bs-height-xs;
-      font-size: 1.2em;
     }
   }
 }
 
+// scss-lint:disable MergeableSelector
 .btn-social {
   // scss-lint:disable ImportantRule
   > :first-child {
-    line-height: $btn-line-height !important;
-    padding-top: $btn-padding-y !important;
-    padding-bottom: $btn-padding-y !important;
     font-size: inherit !important;
+    line-height: $btn-line-height !important;
+    padding-bottom: $btn-padding-y !important;
+    padding-top: $btn-padding-y !important;
   }
 
   // scss-lint:disable ImportantRule
