--- a/src/scss/docs.scss
+++ b/src/scss/docs.scss
@@ -1,144 +1,148 @@
+@import '_partials/variables';
+
 body {
-  font-weight: 300;
   -webkit-font-smoothing: antialiased;
+  font-weight: 300;
 }
 
 h2 {
-  text-align: center;
   font-weight: 300;
+  text-align: center;
 }
 
+// scss-lint:disable VendorPrefix DuplicateProperty PropertySortOrder
 .jumbotron {
-  position: relative;
-  font-size: 16px;
-  color: #fff;
-  color: rgba(255, 255, 255, 0.75);
-  text-align: center;
-  border-radius: 0;
-  padding-bottom: 80px;
-  background-image: -webkit-linear-gradient(left, #720e9e 0, #dd4b39 100%);
-  background-image: -o-linear-gradient(left, #720e9e 0, #dd4b39 100%);
-  background-image: linear-gradient(to right, #720e9e 0, #dd4b39 100%);
+  background-image: -webkit-linear-gradient(left, $color-purple 0, $color-red 100%);
+  background-image: -o-linear-gradient(left, $color-purple 0, $color-red 100%);
+  background-image: linear-gradient(to right, $color-purple 0, $color-red 100%);
   background-repeat: repeat-x;
+  border-radius: 0;
+  color: $color-white;
+  color: rgba(255, 255, 255, .75);
   filter: progid:DXImageTransform.Microsoft.gradient(
                   startColorstr='#ff720e9e',
                   endColorstr='#ffdd4b39',
                   GradientType=1
   );
-}
+  font-size: 16px;
+  padding-bottom: 80px;
+  position: relative;
+  text-align: center;
 
-.jumbotron h1 {
-  margin-bottom: 15px;
-  font-weight: 300;
-  letter-spacing: -1px;
-  color: #fff;
-}
+  h1 {
+    color: $color-white;
+    font-weight: 300;
+    letter-spacing: -1px;
+    margin-bottom: 15px;
+  }
 
-.jumbotron iframe {
-  width: 100px !important;
-  height: 20px !important;
-  border: none;
-  overflow: hidden;
-  margin: 2px;
-}
+  .bottom {
+    background-color: rgba(0, 0, 0, .2);
+    bottom: 0;
+    left: 0;
+    padding: 18px;
+    position: absolute;
+    right: 0;
+  }
 
-.jumbotron p a,
-.jumbotron .jumbotron-links a {
-  font-weight: 500;
-  color: #fff;
+  // scss-lint:disable ImportantRule
+  iframe {
+    border: 0;
+    height: 20px !important;
+    margin: 2px;
+    overflow: hidden;
+    width: 100px !important;
+  }
 
-}
+  // scss-lint:disable NestingDepth
+  .jumbotron-links {
+    font-size: 14px;
+    list-style: none;
+    margin-bottom: 0;
+    margin-top: 15px;
+    padding-left: 0;
 
-.jumbotron .jumbotron-links {
-  margin-top: 15px;
-  margin-bottom: 0;
-  padding-left: 0;
-  list-style: none;
-  font-size: 14px;
-}
+    li {
+      display: inline;
 
-.jumbotron .jumbotron-links li {
-  display: inline;
-}
+      + li {
+        margin-left: 20px;
+      }
+    }
+  }
 
-.jumbotron .jumbotron-links li + li {
-  margin-left: 20px;
-}
-
-.jumbotron .bottom {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  padding: 18px;
-  background-color: rgba(0, 0, 0, 0.2);
+  p a,
+  & .jumbotron-links a {
+    color: $color-white;
+    font-weight: 500;
+  }
 }
 
 .how-to {
   padding: 20px;
+
+  h2 {
+    text-align: center;
+  }
+
+  li {
+    font-size: 21px;
+    line-height: 1.7;
+    margin-top: 20px;
+
+    p {
+      color: $color-grey;
+      font-size: 16px;
+    }
+  }
+
+  code {
+    font-size: 85%;
+    white-space: normal;
+    word-wrap: break-word;
+  }
 }
 
-.how-to h2 {
-  text-align: center;
-}
-
-.how-to li {
-  font-size: 21px;
-  line-height: 1.7;
-  margin-top: 20px;
-
-}
-
-.how-to li p {
-  font-size: 16px;
-  color: #555;
-}
-
-.how-to code {
-  font-size: 85%;
-  word-wrap: break-word;
-  white-space: normal;
-}
-
+// scss-lint:disable VendorPrefix
 footer {
-  text-align: center;
-  opacity: 0.8;
-  padding: 50px;
-  background-image: -webkit-linear-gradient(left, #dd4b39 0, #720e9e 100%);
-  background-image: -o-linear-gradient(left, #dd4b39 0, #720e9e 100%);
-  background-image: linear-gradient(to right, #dd4b39 0, #720e9e 100%);
+  background-image: -webkit-linear-gradient(left, $color-red 0, $color-purple 100%);
+  background-image: -o-linear-gradient(left, $color-red 0, $color-purple 100%);
+  background-image: linear-gradient(to right, $color-red 0, $color-purple 100%);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(
                   startColorstr='#ffdd4b39',
                   endColorstr='#ff720e9e',
                   GradientType=1
   );
-}
+  opacity: .8;
+  padding: 50px;
+  text-align: center;
 
-footer a {
-  color: #fff;
-}
+  a {
+    color: $color-white;
 
-footer a:hover {
-  color: #fff;
+    &:hover {
+      color: $color-white;
+    }
+  }
 }
 
 .links {
-  margin: 0;
   list-style: none;
+  margin: 0;
   padding-left: 0;
-}
 
-.links li {
-  display: inline;
-  padding: 0 10px;
+  li {
+    display: inline;
+    padding: 0 10px;
+  }
 }
 
 .social-class .social-hex {
+  float: right;
   font-family: Monaco, Menlo, Consolas, 'Courier New', monospace;
   font-size: 10px;
-  opacity: 0.3;
-  float: right;
+  opacity: .3;
 }
 
 .social-class li {
@@ -150,7 +154,7 @@ footer a:hover {
 }
 
 .social-class li:hover code {
-  background-color: #e8e8ee;
+  background-color: $color-white-social;
 }
 
 .social-class code {
